add jib and openapi (wip)